# high-frequency-alpha

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
brain-python/: Dockerfile  pyproject.toml
brain-python/hfa_brain/: __init__.py  agent.py  brain.py  cli.py  market.py  models.py  risk.py  server.py
brain-python/tests/: test_brain.py
dashboard-ts/: package.json
dashboard-ts/app/: globals.css  layout.tsx  page.tsx
dashboard-ts/lib/: types.ts
docs/: ARCHITECTURE.md  architecture.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
ingestion-go/: Dockerfile  go.mod  main.go
ingestion-go/internal/config/: config.go
ingestion-go/internal/feed/: feed.go  feed_test.go
ingestion-go/internal/hub/: hub.go  hub_test.go
matcher-rust/: Cargo.toml  Dockerfile
matcher-rust/src/: book.rs  lib.rs  main.rs
proto/: protocol.md
scripts/: verify.py
