[package]
name = "hfa-matcher"
version = "0.1.0"
edition = "2021"
description = "high-frequency-alpha matcher: limit order book + OBI microstructure features"
license = "MIT"

[lib]
name = "hfa_matcher"
path = "src/lib.rs"

[[bin]]
name = "hfa-matcher"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
